Refactor order ownership to use authenticated user